[package]
name = "solana_sandbox"
version = "0.1.0"
edition = "2021"
authors = ["bigman212 <bigman212@yandex.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "^0.10.3"
solana-client = "^1.15.2"
solana-rpc-client = "1.15.2"
solana-sdk = "^1.15.2"
spl-token = "^3.5.0"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = "1.11.1"
custom_solana_programs = { path = "custom_solana_programs" }

[[bin]]
name = "solana_sandbox"
path = "src/main.rs"
